<resources>
    <string name="app_name">EneverreTV</string>
    <string name="todo">Todo</string>
    <string name="reconnect">Reconnect</string>
    <string name="error_connecting_to_the_api">Error connecting to the API</string>
    <string name="error_playing">Error playing</string>
    <string name="the_camera_does_not_support_ptz">The camera does not support PTZ</string>
    <string name="move_the_camera_with_the_pad">Move the camera with the Pad</string>
    <string name="exiting_ptz_mode">Exiting PTZ mode</string>
    <string name="verification_code">Verification Code:</string>
    <string name="scan_the_qr_code_with_your_phone">Scan the QR code with your phone</string>
    <string name="sign_in_to_enverre_tv">Sign in to Enverre TV</string>

    <string name="update_dialog_title">Update available: %1$s</string>
    <string name="update_action_install">Install</string>
    <string name="update_action_later">Later</string>
    <string name="update_action_skip">Skip this version</string>
    <string name="update_install_chooser">Install update</string>
    <string name="update_downloading">Downloading update…</string>
    <string name="update_notification_title">Eneverre TV update</string>
    <string name="update_action_cancel">Cancel</string>
    <string name="update_channel_name">App updates</string>
    <string name="update_channel_description">Downloads and installs new versions of Eneverre TV.</string>

    <string name="locations_title">Locations</string>
    <string name="location_unnamed">Unnamed</string>
    <string name="view_grid_action">View all in grid</string>
    <string name="no_locations_available">No locations available</string>
    <string name="no_cameras_in_location">No cameras in this location</string>
    <string name="view_grid_button">View grid</string>
    <string name="retry">Retry</string>
    <string name="sign_in_again">Sign in again</string>
</resources>