<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_default"
    android:padding="32dp">

    <TextView
        android:id="@+id/launch_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/empty_message_color"
        android:textSize="18sp"
        android:text="@string/error_connecting_to_the_api" />

    <Button
        android:id="@+id/launch_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/retry" />

    <Button
        android:id="@+id/launch_relogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_again" />

</LinearLayout>
