<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070e19">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_enverre_tv"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/txtSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_the_qr_code_with_your_phone"
            android:textSize="20sp"
            android:textColor="#B0C4DE"
            android:layout_marginBottom="18dp"/>

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:background="#FFFFFF"
            android:layout_marginBottom="18dp">

            <ImageView
                android:id="@+id/qrImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="QR Code"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtCodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification_code"
                android:textSize="18sp"
                android:textColor="#B0C4DE"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/txtUserCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CODE123"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:letterSpacing="0.1"
                tools:ignore="HardcodedText" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>